# LWGL

./: CMakeLists.txt  LICENSE  NOTICE  README.md
include/: GLTypes.h
include/LWGL/: Context.h  GLTypes.h  Globals.h  Window.h
include/LWGL/buffer/: Attributes.h  FBO.h  IBuffer.h  RBO.h  VertexLayout.h
include/LWGL/events/: Event.h  EventSite.h  EventSource.h  GLEventSite.h  GLEventSource.h  GLEvents.h
include/LWGL/gl/: GraphicsAPI.h
include/LWGL/gl/geometry/: Buffer.h
include/LWGL/render/: Material.h  Shader.h  ShaderProgram.h
include/LWGL/texture/: CubeMap.h  ImageData.h  Texture1D.h  Texture2D.h  TextureArray.h  TextureBase.h  TextureRef.h
include/core/: Window.h
include/core/buffer/: Attributes.h  Buffer.h
include/core/events/: GLEvents.h
include/core/gl/: GraphicsAPI.h  Shader.h  UBO.h
include/core/gl/geometry/: Attributes.h  IAttributes.h  VertexLayout.h
include/core/render/: Material.h
include/core/texture/: ImageData.h  Texture1D.h  Texture2D.h  TextureArray.h  TextureBase.h
src/: Context.cpp  Window.cpp
src/buffer/: FBO.cpp  IBuffer.cpp  RBO.cpp  UBO.cpp
src/detail/: TexturePrivate.cpp  TexturePrivate.h  common.cpp  common.h  conversions.h
src/events/: CallbackWrapper.h  EventSource.cpp  GLEventSource.cpp
src/gl/: GLEventSource.cpp  GraphicsAPI.cpp  Shader.cpp  UBO.cpp
src/render/: Material.cpp  Shader.cpp  ShaderProgram.cpp
src/texture/: CubeMap.cpp  ImageData.cpp  Texture1D.cpp  Texture2D.cpp  TextureArray.cpp  TextureBase.cpp  TexturePrivate.cpp  TexturePrivate.h  TextureRef.cpp
tests/: CMakeLists.txt
tests/buffers/: Framebuffer.h
tests/src/: ErrorMessages.h  TestingContext.cpp  TestingContext.h  Utils.h  main.cpp
tests/src/tests/: Framebuffer.h  Textures.h
